[FIX] website_slides: prevent content title overflow
This commit fixes the overflow of content title on content page

Task-3384661

--- a/addons/website_slides/static/src/scss/slides_slide_fullscreen.scss
+++ b/addons/website_slides/static/src/scss/slides_slide_fullscreen.scss
@@ -50,6 +50,7 @@
         @include media-breakpoint-down (md) {
             @include o-position-absolute(0, auto, 0, 0);
             box-shadow: 5px 0 15px rgba(black, 0.2);
+            width: 100%;
 
             &.o_wslides_fs_sidebar_hidden {
                 display: none;
